--- a/template.yaml
+++ b/template.yaml
@@ -82,7 +82,7 @@ spec:
         imageUrl:
           title: Image URL
           type: string
-          description: Enter the Quay.io or OpenShift Image URL <IMAGE_URL>/<REPO_NAME>
+          description: Enter the Quay.io or OpenShift Image URL <REGISTRY>/<IMAGE_URL>/<REPO_NAME>
         namespace:
           title: Namespace
           type: string
@@ -92,6 +92,10 @@ spec:
           title: Host URL
           type: string
           description: The external facing host URL
+        argoInstance:
+          title: Argo Instance
+          type: string
+          description: The Argo Instance name (you can find it in backstage config file)
   steps:
     - id: catalogTemplate
       name: Generating the Catalog Info Component
@@ -158,7 +162,7 @@ spec:
       input:
         appName: ${{ parameters.repoName }}
         # Hardcoded value because this is kept as a secret on the server to allow forks to easily change the value
-        argoInstance: argocd.operate-first.cloud
+        argoInstance: ${{ parameters.argoInstance }}
         namespace: ${{ parameters.namespace }}
         repoUrl: ${{ steps.publish.output.remoteUrl }}
         labelValue: ${{ parameters.repoName }}
