--- a/template.yaml
+++ b/template.yaml
@@ -68,6 +68,7 @@ spec:
         - namespace
         - imageUrl
         - hostUrl
+        - argoInstance
       properties:
         imageRepository:
           title: Select a registry
