fix: read host in route.

--- a/skeletons/manifests/manifests/base/route.yaml
+++ b/skeletons/manifests/manifests/base/route.yaml
@@ -12,6 +12,7 @@ metadata:
     app.kubernetes.io/managed-by: backstage
     backstage.io/kubernetes-id: ${{ values.namespace }}
 spec:
+  host: ${{ values.hostUrl }}
   to:
     kind: Service
     name: ${{ values.repoName }}
